fixed break points, margins and grid gap for home page

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /* align-items: center;    */
   text-align: center;
 }
 
@@ -34,6 +34,7 @@
 .mainsection > .body {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+  /* grid-row-gap: 2rem; */
   /* display: grid;
   grid-template-columns: repeat(2, 1fr); */
   justify-content: center;
@@ -41,19 +42,25 @@
   padding: 0 0 100px 0;
 }
 
-@media screen and (min-width: 1020px) {
-  .mainsection > .body {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1em;
+@media screen and (max-width: 1419px) {
+  .mainsection {
+    align-items:center;
   }
 }
 
-@media screen and (min-width: 1430px) {
+@media screen and (min-width: 1020px) {
+  .mainsection > .body {
+    
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1420px) {
   .mainsection > .body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 3.3em;
+
   }
 }
 
